# BYLD-Multi-Agent

./: .gitignore  AI_LOG.md  Makefile  README.md  pyproject.toml
data/: glossary.md  portfolio.json
data/news/: news_01.md  news_02.md  news_03.md  news_04.md  news_05.md  news_06.md  news_07.md  news_08.md  news_09.md  news_10.md  news_11.md  news_12.md  news_13.md  news_14.md  news_15.md  news_16.md  news_17.md  news_18.md  news_19.md  news_20.md
evals/: cases.yaml  run_eval.py
portfolio_ask/: __init__.py  __main__.py  agent.py  indexer.py  llm.py  main.py  schemas.py  vector_store.py
scripts/: generate_mock_data.py
