[project]
name = "byld-multi-agent"
version = "0.1.0"
description = "BYLD Wealth - Multi-Step Agent RAG CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core",
    "langchain-ollama",
    "langchain-huggingface",
    "langchain-chroma",
    "langchain-community",
    "langchain-text-splitters",
    "pydantic>=2.0",
    "langgraph",
    "sentence-transformers",
    "torch",
    "pyyaml",
    "chromadb"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_ask"]

[project.scripts]
portfolio-ask = "portfolio_ask.__main__:main"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
